--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,6 @@
-Flask
-Flask-CORS
-google-generativeai
-gunicorn
-python-dotenv
+Flask==3.0.0
+Flask-CORS==4.0.0
+python-dotenv==1.0.0
+google-generativeai==0.3.0
+requests==2.31.0
+gunicorn==21.2.0
